--- a/nmtsa_cms/nmtsa_cms/templates/base.html
+++ b/nmtsa_cms/nmtsa_cms/templates/base.html
@@ -32,6 +32,14 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
         {% wagtailuserbar %}
 
         {% block content %}{% endblock %}
