--- a/nmtsa_cms/home/templates/home/home_page.html
+++ b/nmtsa_cms/home/templates/home/home_page.html
@@ -15,5 +15,33 @@
         {% endif %}
     </div>
 
-  {{ page.body|richtext }}
+    {{ page.body|richtext }}
+
+    <div class="panels">
+        {% for block in page.panels %}
+            <div class="content-panel">
+                <div class="individual-panel">
+                <h2>{{ block.value.title }}</h2>
+                {% if block.value.image %}
+                    {% image block.value.image fill-480x320 as img %}
+                    <img src="{{ img.url }}" alt="{{ block.value.title }}">
+                {% endif %}
+                <p>{{ block.value.description|richtext }}</p>
+                {% if block.block_type == 'qualified_charitable' %}
+                    <p>Special content for Qualified Charitable Organization Tax Credit</p>
+                {% elif block.block_type == 'corporate_sponsors' %}
+                    <ul>
+                        {% for item in block.value.items %}
+                            <li>{{ item }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                {% if block.value.cta_text and block.value.cta_link %}
+                    <a href="{{ block.value.cta_link.url }}" class="btn">{{ block.value.cta_text }}</a>
+                {% endif %}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
 {% endblock content %}
