--- a/nmtsa_cms/nmtsa_cms/templates/base.html
+++ b/nmtsa_cms/nmtsa_cms/templates/base.html
@@ -17,38 +17,36 @@
         <meta name="description" content="{{ page.search_description }}" />
         {% endif %}
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-        {# Force all links in the live preview panel to be opened in a new tab #}
-        {% if request.in_preview_panel %}
-        <base target="_blank">
-        {% endif %}
-
-        {# Global stylesheets #}
+        
+        {# Link to the external CSS file #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/nmtsa_cms.css' %}">
 
         {% block extra_css %}
-        {# Override this in templates to add extra stylesheets #}
         {% endblock %}
     </head>
 
-    <body class="{% block body_class %}{% endblock %}">
+    <body>
         <nav>
+            <div class="logo">
+                <a href="#"><strong>NMTSA</strong></a>
+            </div>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Get Involved</a></li>
+                <li><a href="#">Support Us</a></li>
             </ul>
+            <a href="#" class="book-now-btn">Login</a>
         </nav>
-        {% wagtailuserbar %}
 
+
+        {% wagtailuserbar %}
         {% block content %}{% endblock %}
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/nmtsa_cms.js' %}"></script>
 
         {% block extra_js %}
-        {# Override this in templates to add extra javascript #}
         {% endblock %}
     </body>
 </html>
