Content block to build a custom page with nest blcoks added

--- a/nmtsa_cms/nmtsa_cms/templates/base.html
+++ b/nmtsa_cms/nmtsa_cms/templates/base.html
@@ -34,7 +34,7 @@
         
                 {% if services_page %}
                     <li>
-                        <a href="{% pageurl services_page %}">Services</a>
+                        <a href="{% pageurl add_page %}">Services</a>
                     </li>
                 {% else %}
                     <li><a href="#">Services</a></li>
