Starting work on admin file selector

--- a/nmtsa_cms/nmtsa_cms/static/css/nmtsa_cms.css
+++ b/nmtsa_cms/nmtsa_cms/static/css/nmtsa_cms.css
@@ -85,3 +85,16 @@ nav .right-side .get-started:hover {
     margin-top: 10px;
   }
 }
+
+
+html, body { padding: 10px; }
+
+smart-tree {
+	 width: 300px;
+  }
+  
+@media only screen and (max-width: 700px) {
+  smart-tree {
+	 width: 100%;
+  }
+}
