--- a/nmtsa_cms/home/templates/home/home_page.html
+++ b/nmtsa_cms/home/templates/home/home_page.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/nmtsa_cms.css' %}">
 {% endblock %}
 
-{% block body_class %}template-homepage{% endblock %}
+{% block body_class %}{% endblock %}
 
 {% block content %}
     <!-- Hero Section -->
