--- a/nmtsa_cms/nmtsa_cms/templates/manage_files.html
+++ b/nmtsa_cms/nmtsa_cms/templates/manage_files.html
@@ -1,74 +1,34 @@
+{% extends "wagtailadmin/base.html" %}
 
-<smart-tree id="tree" 
-has-three-states
-selection-mode="checkBox">
-<smart-tree-item>Home</smart-tree-item>
-<smart-tree-items-group expanded selected>
-Solutions
-<smart-tree-item>Education</smart-tree-item>
-<smart-tree-item>Financial services</smart-tree-item>
-<smart-tree-item>Government</smart-tree-item>
-<smart-tree-item>Manufacturing</smart-tree-item>
-<smart-tree-items-group>
-  Solutions
-  <smart-tree-item>Consumer photo and video</smart-tree-item>
-  <smart-tree-item>Mobile</smart-tree-item>
-  <smart-tree-item>Rich Internet applications</smart-tree-item>
-  <smart-tree-item>Technical communication</smart-tree-item>
-  <smart-tree-item>Training and eLearning</smart-tree-item>
-  <smart-tree-item>Web conferencing</smart-tree-item>
-</smart-tree-items-group>
-<smart-tree-item>All industries and solutions</smart-tree-item>
-</smart-tree-items-group>
-<smart-tree-items-group expanded disabled>
-Products
-<smart-tree-item>PC products</smart-tree-item>
-<smart-tree-item selected>Mobile products</smart-tree-item>
-<smart-tree-item selected>All products</smart-tree-item>
-</smart-tree-items-group>
-<smart-tree-items-group>
-Support
-<smart-tree-item>Support home</smart-tree-item>
-<smart-tree-item>Customer Service</smart-tree-item>
-<smart-tree-item>Knowledge base</smart-tree-item>
-<smart-tree-item>Books</smart-tree-item>
-<smart-tree-item>Training and certification</smart-tree-item>
-<smart-tree-item>Support programs</smart-tree-item>
-<smart-tree-item>Forums</smart-tree-item>
-<smart-tree-item>Documentation</smart-tree-item>
-<smart-tree-item>Updates</smart-tree-item>
-</smart-tree-items-group>
-<smart-tree-items-group>
-Communities
-<smart-tree-item>Designers</smart-tree-item>
-<smart-tree-item>Developers</smart-tree-item>
-<smart-tree-item>Educators and students</smart-tree-item>
-<smart-tree-item>Partners</smart-tree-item>
-<smart-tree-items-group>
-  By resource
-  <smart-tree-item>Labs</smart-tree-item>
-  <smart-tree-item>TV</smart-tree-item>
-  <smart-tree-item>Forums</smart-tree-item>
-  <smart-tree-item>Exchange</smart-tree-item>
-  <smart-tree-item>Blogs</smart-tree-item>
-  <smart-tree-item>Experience Design</smart-tree-item>
-</smart-tree-items-group>
-</smart-tree-items-group>
-<smart-tree-items-group>
-Company
-<smart-tree-item>About Us</smart-tree-item>
-<smart-tree-item>Press</smart-tree-item>
-<smart-tree-item>Investor Relations</smart-tree-item>
-<smart-tree-item>Corporate Affairs</smart-tree-item>
-<smart-tree-item>Careers</smart-tree-item>
-<smart-tree-item>Showcase</smart-tree-item>
-<smart-tree-item>Events</smart-tree-item>
-<smart-tree-item>Contact Us</smart-tree-item>
-<smart-tree-item>Become an affiliate</smart-tree-item>
-</smart-tree-items-group>
-</smart-tree>
+{% block content %}
+    <h1>Manage Files</h1>
 
-<!-- scripts -->  
-<script type="module" src="../../source/modules/smart.tree.js"></script> 
-<script type="module" src="index.js"></script>	
+    <h3 id="tree_label">My Documents</h3>
+    <ul role="tree" aria-labelledby="tree_label">
+        {% for category, items in documents.items %}
+            <li role="treeitem" aria-expanded="false" aria-selected="false">
+                <span>{{ category }}</span>
+                <ul role="group">
+                    {% for item in items %}
+                        {% if item.subitems %}
+                            <li role="treeitem" aria-expanded="false" aria-selected="false">
+                                <span>{{ item.name }}</span>
+                                <ul role="group">
+                                    {% for subitem in item.subitems %}
+                                        <li role="treeitem" aria-selected="false" class="doc">{{ subitem }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                        {% else %}
+                            <li role="treeitem" aria-selected="false" class="doc">{{ item.name }}</li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endfor %}
+    </ul>
 
+    <p>
+        <label>File or Folder Selected: <input id="last_action" type="text" size="15" readonly=""></label>
+    </p>
+{% endblock %}
