--- a/nmtsa_cms/nmtsa_cms/templates/base.html
+++ b/nmtsa_cms/nmtsa_cms/templates/base.html
@@ -19,6 +19,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
         <link rel="stylesheet" type="text/css" href="{% static 'css/nmtsa_cms.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
         {% block extra_css %}
         {% endblock %}
@@ -42,4 +44,19 @@
         {% block extra_js %}
         {% endblock %} 
     </body>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const nestedContentBlocks = document.querySelectorAll('.nested-content-block');
+        
+            nestedContentBlocks.forEach(block => {
+                const parent = block.parentElement;
+                const children = Array.from(block.children);
+        
+                // Move all children up to the parent's level, then remove the original nested content block div
+                children.forEach(child => parent.insertBefore(child, block));
+                parent.removeChild(block);
+            });
+        });
+        </script>
+        
 </html>
