--- a/nmtsa_cms/home/templates/home/home_page.html
+++ b/nmtsa_cms/home/templates/home/home_page.html
@@ -61,4 +61,31 @@
             </div>
         {% endfor %}
     </div>
+    <!-- Contact Us Section -->
+    <div class="contact-section">
+        <h2>Contact Us</h2>
+        <p>Interested in working together? Fill out some info and we will be in touch shortly. We can’t wait to hear from you!</p>
+
+        <form action="{% pageurl page %}#contact" method="POST" class="contact-form">
+            <div class="form-group">
+                <label for="first-name">First Name (required)</label>
+                <input type="text" id="first-name" name="first-name" required>
+            </div>
+            <div class="form-group">
+                <label for="last-name">Last Name (required)</label>
+                <input type="text" id="last-name" name="last-name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email (required)</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message (required)</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn">Send</button>
+            </div>
+        </form>
+    </div>
 {% endblock content %}
